Implementation of review suggestions for Family Difficulty data, refactoring